--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ requests==2.31.0
 six==1.16.0
 typing_extensions==4.10.0
 urllib3==2.2.1
+pymysql==1.1.0
 waitress==3.0.0
 Werkzeug==3.0.1
 wrapt==1.16.0
